fixed webkit-scrollbar

--- a/src/less/template/_styleguide.less
+++ b/src/less/template/_styleguide.less
@@ -193,21 +193,16 @@ h1 {
 	}
 }
 
-::-webkit-scrollbar-button {
-	display: none;
-}
-
 ::-webkit-scrollbar {
 	width: 8px;
-}
-
-::-webkit-scrollbar-track {
-	background: @lightgrey1;
-	border-radius: 50px;
-}
-
-::-webkit-scrollbar-thumb {
-	background: @main;
-	border-radius: 50px;
-	height: 336px;
+	
+	&-track {
+		background: @lightgrey1;
+		border-radius: 50px;
+	}
+	
+	&-thumb {
+		background: @main;
+		border-radius: 50px;
+	}
 }
